Add support for scripting and for cors

--- a/web/basket.html
+++ b/web/basket.html
@@ -349,6 +349,7 @@
       $("#response_status").val(response.status);
       $("#response_body").val(response.body);
       $("#response_is_template").prop("checked", response.is_template);
+      $("#response_is_script").prop("checked", response.is_script);
 
       // headers
       $("#response_headers").html(""); // reset
@@ -399,6 +400,7 @@
       response.status = parseInt($("#response_status").val());
       response.body = $("#response_body").val();
       response.is_template = $("#response_is_template").prop("checked");
+      response.is_script = $("#response_is_script").prop("checked");
       response.headers = {};
       $("#response_headers > div.row").each( function(index) {
         var name = $("#header_name_" + index).val();
@@ -780,6 +782,9 @@
           </div>
           <div class="checkbox">
             <label><input type="checkbox" id="response_is_template"> Process body as HTML template</label>
+          </div>
+          <div class="checkbox">
+            <label><input type="checkbox" id="response_is_script"> Process body as starlark script</label>
           </div>
         </div>
         <div class="modal-footer">
